# tummyai-ci-cd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEST_COVERAGE.md  docker-shell.sh  gcs_data.dvc  pyproject.toml
.github/workflows/: README.md  cd.yml  ci.yml
docs/: TEST_COVERAGE.md  model_training.ipynb
src/api-service/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  docker-hub.sh  docker-shell.sh  pyproject.toml
src/api-service/api/: docke-hub.sh  service.py  utils.py
src/api-service/api/routers/: chat_assistant.py  food_model.py  health_report.py  meal_history.py  user_list.py  user_photo.py
src/api-service/api/utils/: chat_assistant_utils.py  food_model_utils.py  health_report_utils.py  utils.py
src/api-service/tests/: conftest.py
src/api-service/tests/integration/: test_api.py
src/api-service/tests/system/: __init__.py  test_system_api.py
src/api-service/tests/unit/: test_app_endpoints.py  test_basic.py  test_food_model_utils.py  test_gcs_utils.py  test_health_report_utils.py  test_routers.py  test_utils.py
src/data-version/: docker-entrypoint.sh  docker-shell.sh  gcs_data.dvc
src/data-version/.dvc/: config
src/deployment/: .docker-tag  Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  emoji.yaml  visualizer.yaml
src/deployment/deploy_images/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
src/deployment/deploy_k8s/: Pulumi.dev.yaml  Pulumi.ssl.yaml  Pulumi.yaml  __main__.py  create_cluster.py  create_network.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
src/deployment/deploy_single_vm/: Pulumi.dev-test.yaml  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  create_instance.py  provision_instance.py  setup_containers.py  setup_containers_using_command.py  setup_webserver.py  (+1 more)
src/frontend-instructions/: .gitignore  App-AgentChat.md  App-PropertyFinder.md  App-StockAnalyzer.md  App-TaskFlowPro.md  App-TummyAI.md  Component.md  README.md  Theme.md
src/frontend-react/: .env.production  Dockerfile  docker-hub.sh  docker-shell.sh  next.config.js  package-lock.json  package.json
src/validate_model/: validate_model.py
tests/integration/: test_api.py
tests/system/: test_system_api.py
tests/unit/: test_utils.py
validate_model/: README.md  requirements.txt  test_labels.csv  validate_model.py
(+17 files in other folders)
