[project]
name = "tummyai-app-api"
version = "0.1.0"
description = "TummyAI App API Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.27.0",
    "google-cloud-storage>=3.6.0",
    "pandas>=2.3.3",
    "numpy>=2.1.3",
    "scipy>=1.15.3",
    "statsmodels==0.14.5",
    "transformers>=4.57.3",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.4",
    "torch>=2.9.1",
]


[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
